Extract nav, basic styling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10472,8 +10472,12 @@ a.text-dark:focus {
 }
 
 .navbar-laravel {
-  background-color: #fff;
+  background-color: #ffdd57;
   -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
           box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.navbar-laravel .navbar-brand {
+  color: #000;
 }
 
