--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -15,6 +15,7 @@ $pink: #f66D9b;
 $red: #e3342f;
 $orange: #f6993f;
 $yellow: #ffed4a;
+$mb-yellow: #ffdd57;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
