--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,9 @@
 // Variables
 @import 'variables';
 
+// Font Awesome 4.7.0
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
