Prettify FA import

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,7 +6,7 @@
 @import 'variables';
 
 // Font Awesome 4.7.0
-@import "node_modules/font-awesome/scss/font-awesome.scss";
+@import "~font-awesome/scss/font-awesome.scss";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
