--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,6 +1,6 @@
 
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,700');
 
 // Variables
 @import 'variables';
@@ -17,5 +17,8 @@
 
   .navbar-brand {
     color: $black;
+    font-size: 1.25rem;
+    line-height: 1.5;
+    align-items: center;
   }
 }
