--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,3 +22,59 @@
     align-items: center;
   }
 }
+
+/* The search bar */
+input {
+  &.form-control {
+    &.searchbar {
+      border-left: none;
+      border-right: none;
+      padding-left: 5vw;
+      padding-right: 5vw;
+      box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
+      border-radius: 0;
+      font-size: 1.25rem;
+      height: 2.25em;
+      font-weight: 300;
+      color: black;
+      &::placeholder {
+        color: #dddddd;
+      }
+    }
+  }
+}
+
+/* Search Results */
+
+.movie-results {
+  width: 100%;
+  position: relative;
+  hr {
+      margin: 1rem 0;
+  }
+  .movie-item {
+      width: 100%;
+      display: table;
+      margin-bottom: 20px;
+      .left-side {
+          display: table-cell;
+          width: 100px;
+          height: 110px;
+          img {
+              max-height: 110px;
+              max-width: 110px;
+          }
+      }
+      .right-side {
+          display: table-cell;
+          padding-left: 10px;
+          font-size: 20px;
+          vertical-align: top;
+          .action-buttons {
+              margin-top: 10px;
+              // display: table-cell;
+              // text-align: right;
+          }
+      }
+  }
+}
