--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -5,6 +5,7 @@ $body-bg: #f8fafc;
 // Typography
 $font-family-sans-serif: "Nunito", sans-serif;
 $font-size-base: 0.9rem;
+$font-weight-base: 300;
 $line-height-base: 1.6;
 
 // Colors
