Add to Catalog modal

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -20,3 +20,14 @@ $mb-yellow: #ffdd57;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// My Colors - Tailwind
+$white: #ffffff;
+$grey-lightest: #F8FAFC;
+$grey-lighter: #F1F5F8;
+$grey-light: #DAE1E7;
+$grey: #B8C2CC; // base
+$grey-dark: #8795A1;
+$grey-darker: #606F7B;
+$grey-darkest: #3D4852;
+$black: #22292F;
