--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -107,8 +107,18 @@ input {
           }
           .action-buttons {
               margin-top: 10px;
-              // display: table-cell;
-              // text-align: right;
+              p {
+                color: $grey;
+                font-size: 1rem;
+                .btn {
+                  &.btn-link {
+                    font-size: 1rem;
+                  }
+                }
+                i.fa {
+                  font-size: 1rem;
+                }
+              }
           }
       }
   }
