--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -107,7 +107,7 @@ input {
           }
           .action-buttons {
               margin-top: 10px;
-              p {
+              span {
                 color: $grey;
                 font-size: 1rem;
                 .btn {
