Setup some basic scaffolding for Move/Copy/Delete movie

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13645,6 +13645,10 @@ input.form-control.searchbar::placeholder {
   font-size: 1rem;
 }
 
+.movie-item .right-side section.confirmation {
+  font-size: 1rem;
+}
+
 .movie-item .right-side .action-buttons {
   margin-top: 10px;
 }
