--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -106,6 +106,11 @@ input {
         .movie-title {
 
         }
+        section {
+          &.confirmation {
+            font-size: 1rem;
+          }
+        }
         .action-buttons {
             margin-top: 10px;
             span {
