--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -21,7 +21,7 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 
-// My Colors - Tailwind
+//==================== Tailwind colors ====================
 $white: #ffffff;
 $grey-lightest: #F8FAFC;
 $grey-lighter: #F1F5F8;
@@ -31,3 +31,20 @@ $grey-dark: #8795A1;
 $grey-darker: #606F7B;
 $grey-darkest: #3D4852;
 $black: #22292F;
+
+$blue-lightest: #EFF8FF;
+$blue-lighter: #BCDEFA;
+$blue-light: #6CB2EB;
+$blue: #3490DC; // base
+$blue-dark: #2779BD;
+$blue-darker: #1C3D5A;
+$blue-darkest: #12283A;
+
+$red-lightest: #FCEBEA;
+$red-lighter: #F9ACAA;
+$red-light: #EF5753;
+$red: #E3342F; // base
+$red-dark: #CC1F1A;
+$red-darker: #621B18;
+$red-darkest: #3B0D0C;
+//==================== END Tailwind colors ====================
