--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13686,15 +13686,15 @@ input.form-control.searchbar::placeholder {
 }
 
 .movie-item {
-  width: 100%;
-  display: table;
-  margin-bottom: 20px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 100px 1fr;
+  margin-bottom: 30px;
 }
 
 .movie-item .left-side {
-  display: table-cell;
-  width: 100px;
   height: 110px;
+  width: 110px;
 }
 
 .movie-item .left-side img {
@@ -13703,10 +13703,9 @@ input.form-control.searchbar::placeholder {
 }
 
 .movie-item .right-side {
+  display: grid;
   font-size: 1.5rem;
-  display: table-cell;
-  margin-left: 10px;
-  vertical-align: top;
+  grid-template-rows: 1fr 30px;
 }
 
 .movie-item .right-side .movie-year {
