--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -132,28 +132,24 @@ input {
   }
 }
 .movie-item {
-    width: 100%;
-    display: table;
-    margin-bottom: 20px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 100px 1fr;
+    margin-bottom: 30px;
     .left-side {
-        display: table-cell;
-        width: 100px;
         height: 110px;
+        width: 110px;
         img {
             max-height: 110px;
             max-width: 110px;
         }
     }
     .right-side {
+        display: grid;
         font-size: 1.5rem;
-        display: table-cell;
-        margin-left: 10px;
-        vertical-align: top;
+        grid-template-rows: 1fr 30px;
         .movie-year {
           font-size: 1rem;
-        }
-        .movie-title {
-
         }
         section {
           &.confirmation {
