--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13598,6 +13598,38 @@ strong {
   -webkit-box-shadow: 0 8px 6px -6px #22292F;
 }
 
+.moviebuff-notification {
+  padding: 10px;
+  margin: 0 5px 5px;
+  font-size: 12px;
+  color: #ffffff;
+  background: #6CB2EB;
+  border-left: 5px solid #2779BD;
+  box-shadow: 0 8px 6px -6px #22292F;
+  -moz-box-shadow: 0 8px 6px -6px #22292F;
+  -webkit-box-shadow: 0 8px 6px -6px #22292F;
+  /*
+  Style for specific type of notification, will be applied when you
+  call notification with "type" parameter:
+  this.$notify({ type: 'my-type', message: 'Foo' })
+  */
+}
+
+.moviebuff-notification.warn {
+  background: #ffb648;
+  border-left-color: #f48a06;
+}
+
+.moviebuff-notification.error {
+  background: #E54D42;
+  border-left-color: #B82E24;
+}
+
+.moviebuff-notification.success {
+  background-color: #51D88A;
+  border-left-color: #1F9D55;
+}
+
 .level {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
