--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -63,6 +63,49 @@ strong {
   }
 }
 
+.moviebuff-notification {
+  // Style of the notification itself
+  padding: 10px;
+  margin: 0 5px 5px;
+
+  font-size: 12px;
+
+  color: $white;
+  background: $blue-light;
+  border-left: 5px solid $blue-dark;
+
+  @include btn-drop-shadow($black);
+
+  // Style for title line
+  .notification-title {
+  }
+
+  // Style for content
+  .notification-content {
+  }
+
+  /*
+  Style for specific type of notification, will be applied when you
+  call notification with "type" parameter:
+  this.$notify({ type: 'my-type', message: 'Foo' })
+  */
+
+  &.warn {
+    background: #ffb648;
+    border-left-color: #f48a06;
+  }
+
+  &.error {
+    background: #E54D42;
+    border-left-color: #B82E24;
+  }
+
+  &.success {
+    background-color: $green-light;
+    border-left-color: $green-dark;
+  }
+}
+
 // Roll out my own level component a-la Bulma
 .level {
   display: grid;
